# AI-Decision-Auditor

./: .gitignore  README.md  ai_decision_auditor_future_steps.txt  ai_decision_auditor_progress.txt  ai_decision_auditor_roadmap.txt
backend/: main.py  pyproject.toml
backend/agents/: comparator.py  critic.py  estimator.py  graph.py  planner.py  simulator.py  verifier.py
backend/api/: query.py
backend/data/: sample_doc.txt
backend/services/: capability_router.py  guardrails.py  intent_classifier.py  llm.py  pdf_parser.py  query_planner.py  retriever.py  structure_builder.py  tree_builder.py
backend/tests/: test_agents.py  test_graph.py  test_llm_retrieval.py  test_tree.py
frontend/app/: page.tsx
