[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.1",
    "groq>=1.1.1",
    "langchain>=1.2.13",
    "langgraph>=1.1.3",
    "openai>=2.29.0",
    "pageindex>=0.2.8",
    "pypdf>=6.9.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]
